--- a/assets/css/standards.css
+++ b/assets/css/standards.css
@@ -129,7 +129,7 @@ button:active {
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
-  color: #ffffff;
+  color: #fff;
   text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.25);
 }
 
